--- a/tmux.conf
+++ b/tmux.conf
@@ -35,3 +35,7 @@ setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+
+
+# vim & tmux
+set -g default-terminal "screen-256color"
